--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         # Move the built files to the dist directory
         mkdir -p dist
-        cp -r ./PaddleBall/Builds/HTML5/* ./dist/
+        cp -r ./github/workspace/build/WebGL/WebGL
 
         # Deploy the built files to the production branch
         git config user.name "GitHub Actions"
