--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,14 +17,13 @@ jobs:
       with:
         node-version: "14.x"
 
-    - name: Cache Library
-      uses: actions/cache@v2
+    - uses: actions/cache@v2
       with:
-        path: |
-          Library
-        key: ${{ runner.os }}-library-${{ hashFiles('**/Packages/manifest.json') }}
+        path: Library
+        key: Library-PaddleBall-WebGL
         restore-keys: |
-          ${{ runner.os }}-library-
+          Library-PaddleBall-
+          Library-
 
     - uses: game-ci/unity-builder@v2.2.0
       env:
