--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,13 @@ jobs:
       with:
         node-version: "14.x"
 
-    - uses: actions/cache@v2
+    - name: Restore cached Library
+      id: cache-library-restore
+      uses: actions/cache/restore@v3
       with:
-        path: Library
-        key: Library-PaddleBall-WebGL
-        restore-keys: |
-          Library-PaddleBall-
-          Library-
+        path: |
+          Library
+        key: ${{ runner.os }}-Library
 
     - uses: game-ci/unity-builder@v2.2.0
       env:
@@ -47,7 +47,15 @@ jobs:
         git commit -m "Remove previous build."
 
         # add built files and deploy
-        git add -f ./build/
+        git add -f ./build/WebGL
         git commit -m "Deploy new build"
         git push -uf origin production
+
+    - name: Save Library
+      id: cache-library-save
+      uses: actions/cache/save@v3
+      with:
+        path: |
+          Library
+        key: ${{ steps.cache-library-restore.outputs.cache-primary-key }}
 
