--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
         git commit -m "Remove previous build."
 
         # add built files and deploy
+        ls ./build/WebGL/
         cp -R /build/WebGL/WebGL/* .
         git add -f ./index.html ./TemplateData/* ./Build
         git commit -m "Deploy new build"
